--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
+    "@tanstack/react-query": "^4.29.3",
+    "@trpc/client": "^10.21.1",
+    "@trpc/next": "^10.21.1",
+    "@trpc/react-query": "^10.21.1",
+    "@trpc/server": "^10.21.1",
     "@types/node": "18.15.13",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
@@ -16,10 +22,16 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.12.3",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "prisma": "^4.13.0"
   }
 }
