--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@prisma/client": "^4.13.0",
     "@tanstack/react-query": "^4.29.3",
     "@trpc/client": "^10.21.1",
@@ -21,6 +24,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "framer-motion": "^10.12.4",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
