--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.8.0",
     "superjson": "^1.12.3",
     "tailwindcss": "3.3.1",
